# We currently do not keep a detailed log of all changes to the pyFormex source,
# it is still changing too frequently.