@@ -1,11 +1,16 @@
-pyFormex is a program for generating, manipulating and operating on 
+pyFormex is a tool for generating, manipulating and operating on 
 large geometrical models of 3D structures by sequences of mathematical
 transformations.
-Through its powerful scripting language, it is very useful for automated
-and parametric design.
+A powerful scripting language provides operations for handling both wireframe and surface geometries.
+
+pyFormex is easily extendible, usable in automated and parametric design,
+and can readibly be linked to many other programs.
+
+While still under development, it already provides many features for 
+professional application. 
  
 More information on the website: http://pyformex.berlios.de
 or contact benedict.verhegghe@ugent.be
 
 Copyright 2004 Benedict Verhegghe
-Distributed under the GNU General Public License.
+Distributed under the GNU General Public License Version 2 or higher.
